--- a/arikeys-mod/gradle.properties
+++ b/arikeys-mod/gradle.properties
@@ -1,20 +1,20 @@
-org.gradle.jvmargs=-Xmx2048M
+# Done to increase the memory available to Gradle.
+org.gradle.jvmargs=-Xmx2G
+org.gradle.parallel=true
 
-minecraft_version=1.20
-supported_version=1.20(.1)
-enabled_platforms=fabric,forge
+# Mod properties
+mod_version = 2.4
+maven_group = org.alvindimas05
+archives_name = arikeys-mod
+enabled_platforms = fabric,neoforge
 
-archives_base_name=arikeys
-mod_version=2.3
-maven_group=eu.asangarin
+# Minecraft properties
+minecraft_version = 1.21
+yarn_mappings = 1.21+build.1
 
-architectury_version=9.1
-
-yarn_mappings=1.20+build.1
-fabric_loader_version=0.14.21
-fabric_api_version=0.83.0+1.20
-
-forge_version=46.0.14
-
-
-
+# Dependencies
+architectury_api_version = 13.0.2
+fabric_loader_version = 0.16.2
+fabric_api_version = 0.102.0+1.21
+neoforge_version = 21.0.42-beta
+yarn_mappings_patch_neoforge_version = 1.21+build.4
