--- a/.github/workflows/gradle-build.yml
+++ b/.github/workflows/gradle-build.yml
@@ -34,7 +34,9 @@ jobs:
         run: mvn package
       - name: Build Mods with Gradle
         working-directory: ./arikeys-mod
-        run: ./gradlew build
+        run: |
+          chmod +x ./gradlew
+          ./gradlew build
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
