--- a/.github/workflows/gradle-build.yml
+++ b/.github/workflows/gradle-build.yml
@@ -41,7 +41,10 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: artifacts-jar
-          path: ./arikeys-plugin/target/*.jar,./arikeys-mod/fabric/build/libs/arikeys-mod-fabric-2.4.jar,./arikeys-mod/neoforge/build/libs/arikeys-mod-neoforge-2.4.jar
+          path: |
+            ./arikeys-plugin/target/arikeyspplugin-2.4.jar
+            ./arikeys-mod/fabric/build/libs/arikeys-mod-fabric-2.4.jar
+            ./arikeys-mod/neoforge/build/libs/arikeys-mod-neoforge-2..jar
       - name: Publish release
         if: ${{ github.event_name == 'workflow_dispatch' }}
         uses: ncipollo/release-action@v1
