--- a/arikeys-mod/gradle.properties
+++ b/arikeys-mod/gradle.properties
@@ -1,20 +1,17 @@
-# Done to increase the memory available to Gradle.
 org.gradle.jvmargs=-Xmx2G
 org.gradle.parallel=true
 
-# Mod properties
+
 mod_version = 2.4
 maven_group = org.alvindimas05
-archives_name = arikeys-mod
-enabled_platforms = fabric,neoforge
+archives_name = arikeys
+enabled_platforms = fabric
 
-# Minecraft properties
 minecraft_version = 1.21
 yarn_mappings = 1.21+build.1
 
-# Dependencies
 architectury_api_version = 13.0.2
 fabric_loader_version = 0.16.2
 fabric_api_version = 0.102.0+1.21
-neoforge_version = 21.0.42-beta
-yarn_mappings_patch_neoforge_version = 1.21+build.4
+#neoforge_version = 21.0.42-beta
+#yarn_mappings_patch_neoforge_version = 1.21+build.4
