--- a/arikeys-plugin/src/main/resources/plugin.yml
+++ b/arikeys-plugin/src/main/resources/plugin.yml
@@ -1,8 +1,8 @@
 name: AriKeys
 version: '${project.version}'
-main: eu.asangarin.arikeys.AriKeysPlugin
-api-version: 1.17
-author: ASangarin
+main: org.alvindimas05.arikeys.AriKeysPlugin
+api-version: 1.21
+author: alvindimas05
 description: AriKeys Plugin lets your server receive keybind presses from the AriKeys client.
 softdepend: [ PlaceholderAPI, MythicMobs ]
 commands:
