--- a/.github/workflows/gradle-build.yml
+++ b/.github/workflows/gradle-build.yml
@@ -28,7 +28,7 @@ jobs:
         uses: gradle/actions/setup-gradle@417ae3ccd767c252f5661f1ace9f835f9654f2b5
       - uses: SpraxDev/Action-SpigotMC@v5
         with:
-          versions: 1.21
+          versions: 1.21/
       - name: Build Plugin with Maven
         working-directory: ./arikeys-plugin
         run: mvn package
