--- a/.github/workflows/gradle-build.yml
+++ b/.github/workflows/gradle-build.yml
@@ -26,14 +26,7 @@ jobs:
           settings-path: ${{ github.workspace }}
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@417ae3ccd767c252f5661f1ace9f835f9654f2b5
-      - uses: SpraxDev/Action-SpigotMC@v5
-        with:
-          versions: 1.21/
-      - name: Build Plugin with Maven
-        working-directory: ./arikeys-plugin
-        run: mvn package
       - name: Build Mods with Gradle
-        working-directory: ./arikeys-mod
         run: |
           chmod +x ./gradlew
           ./gradlew build
@@ -41,15 +34,12 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: artifacts-jar
-          path: |
-            ./arikeys-plugin/target/*
-            ./arikeys-mod/fabric/build/libs/*
-            ./arikeys-mod/neoforge/build/libs/*
+          path: ./fabric/build/libs/*
       - name: Publish release
         if: ${{ github.event_name == 'workflow_dispatch' }}
         uses: ncipollo/release-action@v1
         with:
-          artifacts: ./arikeys-plugin/target/*.jar,./arikeys-mod/fabric/build/libs/arikeys-fabric-${{ inputs.tag }}.jar,./arikeys-mod/neoforge/build/libs/arikeys-neoforge-${{ inputs.tag }}.jar
+          artifacts: ./fabric/build/libs/arikeys-fabric-${{ inputs.tag }}.jar
           tag: ${{ inputs.tag }}
           name: AriKeys ${{ inputs.tag }}
           allowUpdates: true
