--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ org.gradle.parallel=true
 
 mod_version = 2.4
 maven_group = org.alvindimas05
-archives_name = arikeys
+archives_name = mythickeys
 enabled_platforms = fabric
 
 minecraft_version = 1.21
