--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,7 @@ subprojects {
             it.mappings("net.fabricmc:yarn:$rootProject.yarn_mappings:v2")
 //            it.mappings("dev.architectury:yarn-mappings-patch-neoforge:$rootProject.yarn_mappings_patch_neoforge_version")
         }
+        modImplementation files("../libs/voicelib-fabric-1.0.1.jar")
     }
 
     java {
