rename into mythiccontrols

--- a/settings.gradle
+++ b/settings.gradle
@@ -7,7 +7,7 @@ pluginManagement {
     }
 }
 
-rootProject.name = 'mythickeys'
+rootProject.name = 'mythiccontrols'
 
 include 'common'
 include 'fabric'
