--- a/.github/workflows/gradle-build.yml
+++ b/.github/workflows/gradle-build.yml
@@ -22,7 +22,7 @@ jobs:
         with:
           java-version: '21'
           distribution: 'temurin'
-          server-id: mythickeys
+          server-id: mythiccontrols
           settings-path: ${{ github.workspace }}
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@417ae3ccd767c252f5661f1ace9f835f9654f2b5
@@ -39,9 +39,9 @@ jobs:
         if: ${{ github.event_name == 'workflow_dispatch' }}
         uses: ncipollo/release-action@v1
         with:
-          artifacts: ./fabric/build/libs/mythickeys-fabric-${{ inputs.tag }}.jar
+          artifacts: ./fabric/build/libs/mythiccontrols-fabric-${{ inputs.tag }}.jar
           tag: ${{ inputs.tag }}
-          name: MythicKeys ${{ inputs.tag }}
+          name: MythicControls ${{ inputs.tag }}
           allowUpdates: true
           artifactErrorsFailBuild: false
           prerelease: true
