--- a/.github/workflows/gradle-build.yml
+++ b/.github/workflows/gradle-build.yml
@@ -25,7 +25,7 @@ jobs:
           server-id: mythiccontrols
           settings-path: ${{ github.workspace }}
       - name: Setup Gradle
-        uses: gradle/actions/setup-gradle@417ae3ccd767c252f5661f1ace9f835f9654f2b5
+        uses: gradle/actions/setup-gradle@v4
       - name: Build Mods with Gradle
         run: |
           chmod +x ./gradlew
