update gradle version

--- a/.github/workflows/gradle-build.yml
+++ b/.github/workflows/gradle-build.yml
@@ -26,6 +26,8 @@ jobs:
           settings-path: ${{ github.workspace }}
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v4
+        with:
+          gradle-version: "9.0"
       - name: Build Mods with Gradle
         run: |
           chmod +x ./gradlew
