--- a/.github/workflows/gradle-build.yml
+++ b/.github/workflows/gradle-build.yml
@@ -25,9 +25,7 @@ jobs:
           server-id: mythiccontrols
           settings-path: ${{ github.workspace }}
       - name: Setup Gradle
-        uses: gradle/actions/setup-gradle@v4
-        with:
-          gradle-version: "9.0"
+        uses: gradle/actions/setup-gradle@v4\
       - name: Build Mods with Gradle
         run: |
           chmod +x ./gradlew
