--- a/.github/workflows/gradle-build.yml
+++ b/.github/workflows/gradle-build.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Build Mods with Gradle
         run: |
           chmod +x ./gradlew
-          ./gradlew build
+          ./gradlew build --project-cache-dir=../cache
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
